syntax = "proto3";

package kyve.delegation.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "github.com/KYVENetwork/chain/x/delegation/types";


// Delegator ...
message Delegator {
  // k_index ...
  uint64 k_index = 1;
  // staker ...
  string staker = 2;
  // delegator ...
  string delegator = 3;
  // delegation_amount ...
  uint64 delegation_amount = 4;
}

// DelegationEntries ...
message DelegationEntries {
  // balance ...
  string balance = 1;
  // staker ...
  string staker = 2;
  // k_index ...
  uint64 k_index = 3;
}

// DelegationPoolData ...
message DelegationData {
  // Primary keys

  // staker ...
  string staker = 1;

  // F1Distribution

  // current_rewards ...
  uint64 current_rewards = 2;
  // total_delegation ...
  uint64 total_delegation = 3;
  // latest_index_k ...
  uint64 latest_index_k = 4;

  // Stats

  // delegator_count ...
  uint64 delegator_count = 5;
  // latest_index_was_undelegation ...
  bool latest_index_was_undelegation = 6;
}

// UndelegationQueueEntry ...
message UndelegationQueueEntry {
  // index ...
  uint64 index = 1;
  // staker ...
  string staker = 2;
  // delegator ...
  string delegator = 3;
  // amount ...
  uint64 amount = 4;
  // creation_time ...
  uint64 creation_time = 5;
}

// QueueState ...
message QueueState {
  // low_index ...
  uint64 low_index = 1;
  // high_index ...
  uint64 high_index = 2;
}
